# birthday-checker-app

./: Cargo.toml  Dockerfile  README.md  log4rs.yml
.github/workflows/: CICD.yml
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs  user.rs  utils.rs
